ParLatte.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParLatte where
import AbsLatte
import LexLatte
import ErrM

}

%name pProgram Program
-- no lexer declaration
%monad { Err } { thenM } { returnM }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&' { PT _ (TS _ 4) }
  '&&' { PT _ (TS _ 5) }
  '(' { PT _ (TS _ 6) }
  ')' { PT _ (TS _ 7) }
  '*' { PT _ (TS _ 8) }
  '+' { PT _ (TS _ 9) }
  '++' { PT _ (TS _ 10) }
  ',' { PT _ (TS _ 11) }
  '-' { PT _ (TS _ 12) }
  '--' { PT _ (TS _ 13) }
  '/' { PT _ (TS _ 14) }
  ';' { PT _ (TS _ 15) }
  '<' { PT _ (TS _ 16) }
  '<=' { PT _ (TS _ 17) }
  '=' { PT _ (TS _ 18) }
  '==' { PT _ (TS _ 19) }
  '>' { PT _ (TS _ 20) }
  '>=' { PT _ (TS _ 21) }
  'bool' { PT _ (TS _ 22) }
  'else' { PT _ (TS _ 23) }
  'false' { PT _ (TS _ 24) }
  'if' { PT _ (TS _ 25) }
  'int' { PT _ (TS _ 26) }
  'print' { PT _ (TS _ 27) }
  'return' { PT _ (TS _ 28) }
  'string' { PT _ (TS _ 29) }
  'true' { PT _ (TS _ 30) }
  'void' { PT _ (TS _ 31) }
  'while' { PT _ (TS _ 32) }
  '{' { PT _ (TS _ 33) }
  '||' { PT _ (TS _ 34) }
  '}' { PT _ (TS _ 35) }
  L_ident  { PT _ (TV $$) }
  L_integ  { PT _ (TI $$) }
  L_quoted { PT _ (TL $$) }

%%

Ident   :: { Ident }
Ident    : L_ident  { Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read ( $1)) :: Integer }

String  :: { String }
String   : L_quoted {  $1 }

Program :: { Program }
Program : ListStmt { AbsLatte.Prg (reverse $1) }
Block :: { Block }
Block : '{' ListStmt '}' { AbsLatte.Blck (reverse $2) }
ListStmt :: { [Stmt] }
ListStmt : {- empty -} { [] } | ListStmt Stmt { flip (:) $1 $2 }
Stmt :: { Stmt }
Stmt : ';' { AbsLatte.Empty }
     | Block { AbsLatte.BStmt $1 }
     | Type ListItem ';' { AbsLatte.Decl $1 $2 }
     | Type Ident '(' ListArg ')' Block { AbsLatte.FDecl $1 $2 $4 $6 }
     | Ident '=' Expr ';' { AbsLatte.Ass $1 $3 }
     | Ident '++' ';' { AbsLatte.Incr $1 }
     | Ident '--' ';' { AbsLatte.Decr $1 }
     | 'return' Expr ';' { AbsLatte.Ret $2 }
     | 'return' ';' { AbsLatte.VRet }
     | 'if' '(' Expr ')' Block { AbsLatte.Cond $3 $5 }
     | 'if' '(' Expr ')' Block 'else' Block { AbsLatte.CondElse $3 $5 $7 }
     | 'while' '(' Expr ')' Block { AbsLatte.While $3 $5 }
     | Expr ';' { AbsLatte.SExp $1 }
     | 'print' Expr ';' { AbsLatte.Print $2 }
Arg :: { Arg }
Arg : Type Ident { AbsLatte.ArgVal $1 $2 }
    | Type '&' Ident { AbsLatte.ArgRef $1 $3 }
ListArg :: { [Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }
Item :: { Item }
Item : Ident { AbsLatte.NoInit $1 }
     | Ident '=' Expr { AbsLatte.Init $1 $3 }
ListItem :: { [Item] }
ListItem : Item { (:[]) $1 } | Item ',' ListItem { (:) $1 $3 }
Type :: { Type }
Type : PType { AbsLatte.ArgTypeP $1 }
     | VType { AbsLatte.VoidType $1 }
PType :: { PType }
PType : 'int' { AbsLatte.Integer }
      | 'string' { AbsLatte.String }
      | 'bool' { AbsLatte.Bool }
VType :: { VType }
VType : 'void' { AbsLatte.Void }
ListType :: { [Type] }
ListType : {- empty -} { [] }
         | Type { (:[]) $1 }
         | Type ',' ListType { (:) $1 $3 }
Expr6 :: { Expr }
Expr6 : Ident { AbsLatte.EVar $1 }
      | Integer { AbsLatte.ELitInt $1 }
      | String { AbsLatte.EString $1 }
      | 'true' { AbsLatte.ELitTrue }
      | 'false' { AbsLatte.ELitFalse }
      | Ident '(' ListExpr ')' { AbsLatte.EApp $1 $3 }
      | '(' Expr ')' { $2 }
Expr5 :: { Expr }
Expr5 : '-' Expr6 { AbsLatte.Neg $2 }
      | '!' Expr6 { AbsLatte.Not $2 }
      | Expr6 { $1 }
Expr4 :: { Expr }
Expr4 : Expr4 MulOp Expr5 { AbsLatte.EMul $1 $2 $3 } | Expr5 { $1 }
Expr3 :: { Expr }
Expr3 : Expr3 AddOp Expr4 { AbsLatte.EAdd $1 $2 $3 } | Expr4 { $1 }
Expr2 :: { Expr }
Expr2 : Expr2 RelOp Expr3 { AbsLatte.ERel $1 $2 $3 } | Expr3 { $1 }
Expr1 :: { Expr }
Expr1 : Expr2 '&&' Expr1 { AbsLatte.EAnd $1 $3 } | Expr2 { $1 }
Expr :: { Expr }
Expr : Expr1 '||' Expr { AbsLatte.EOr $1 $3 } | Expr1 { $1 }
ListExpr :: { [Expr] }
ListExpr : {- empty -} { [] }
         | Expr { (:[]) $1 }
         | Expr ',' ListExpr { (:) $1 $3 }
AddOp :: { AddOp }
AddOp : '+' { AbsLatte.Plus } | '-' { AbsLatte.Minus }
MulOp :: { MulOp }
MulOp : '*' { AbsLatte.Times }
      | '/' { AbsLatte.Div }
      | '%' { AbsLatte.Mod }
RelOp :: { RelOp }
RelOp : '<' { AbsLatte.LTH }
      | '<=' { AbsLatte.LE }
      | '>' { AbsLatte.GTH }
      | '>=' { AbsLatte.GE }
      | '==' { AbsLatte.EQU }
      | '!=' { AbsLatte.NE }
{

returnM :: a -> Err a
returnM = return

thenM :: Err a -> (a -> Err b) -> Err b
thenM = (>>=)

happyError :: [Token] -> Err a
happyError ts =
  Bad $ "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ id(prToken t) ++ "'"

myLexer = tokens
}
