ParLatte.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParLatte.y
-----------------------------------------------------------------------------


rule 37 is unused
rule 38 is unused
rule 39 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListStmt                                (4)
	Block -> '{' ListStmt '}'                          (5)
	ListStmt ->                                        (6)
	ListStmt -> ListStmt Stmt                          (7)
	Stmt -> ';'                                        (8)
	Stmt -> Block                                      (9)
	Stmt -> Type ListItem ';'                          (10)
	Stmt -> Type Ident '(' ListArg ')' Block           (11)
	Stmt -> Ident '=' Expr ';'                         (12)
	Stmt -> Ident '++' ';'                             (13)
	Stmt -> Ident '--' ';'                             (14)
	Stmt -> 'return' Expr ';'                          (15)
	Stmt -> 'return' ';'                               (16)
	Stmt -> 'if' '(' Expr ')' Block                    (17)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (18)
	Stmt -> 'while' '(' Expr ')' Block                 (19)
	Stmt -> Expr ';'                                   (20)
	Stmt -> 'print' Expr ';'                           (21)
	Arg -> Type Ident                                  (22)
	Arg -> Type '&' Ident                              (23)
	ListArg ->                                         (24)
	ListArg -> Arg                                     (25)
	ListArg -> Arg ',' ListArg                         (26)
	Item -> Ident                                      (27)
	Item -> Ident '=' Expr                             (28)
	ListItem -> Item                                   (29)
	ListItem -> Item ',' ListItem                      (30)
	Type -> PType                                      (31)
	Type -> VType                                      (32)
	PType -> 'int'                                     (33)
	PType -> 'string'                                  (34)
	PType -> 'bool'                                    (35)
	VType -> 'void'                                    (36)
	ListType ->                                        (37)
	ListType -> Type                                   (38)
	ListType -> Type ',' ListType                      (39)
	Expr6 -> Ident                                     (40)
	Expr6 -> Integer                                   (41)
	Expr6 -> String                                    (42)
	Expr6 -> 'true'                                    (43)
	Expr6 -> 'false'                                   (44)
	Expr6 -> Ident '(' ListExpr ')'                    (45)
	Expr6 -> '(' Expr ')'                              (46)
	Expr5 -> '-' Expr6                                 (47)
	Expr5 -> '!' Expr6                                 (48)
	Expr5 -> Expr6                                     (49)
	Expr4 -> Expr4 MulOp Expr5                         (50)
	Expr4 -> Expr5                                     (51)
	Expr3 -> Expr3 AddOp Expr4                         (52)
	Expr3 -> Expr4                                     (53)
	Expr2 -> Expr2 RelOp Expr3                         (54)
	Expr2 -> Expr3                                     (55)
	Expr1 -> Expr2 '&&' Expr1                          (56)
	Expr1 -> Expr2                                     (57)
	Expr -> Expr1 '||' Expr                            (58)
	Expr -> Expr1                                      (59)
	ListExpr ->                                        (60)
	ListExpr -> Expr                                   (61)
	ListExpr -> Expr ',' ListExpr                      (62)
	AddOp -> '+'                                       (63)
	AddOp -> '-'                                       (64)
	MulOp -> '*'                                       (65)
	MulOp -> '/'                                       (66)
	MulOp -> '%'                                       (67)
	RelOp -> '<'                                       (68)
	RelOp -> '<='                                      (69)
	RelOp -> '>'                                       (70)
	RelOp -> '>='                                      (71)
	RelOp -> '=='                                      (72)
	RelOp -> '!='                                      (73)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'else'         { PT _ (TS _ 23) }
	'false'        { PT _ (TS _ 24) }
	'if'           { PT _ (TS _ 25) }
	'int'          { PT _ (TS _ 26) }
	'print'        { PT _ (TS _ 27) }
	'return'       { PT _ (TS _ 28) }
	'string'       { PT _ (TS _ 29) }
	'true'         { PT _ (TS _ 30) }
	'void'         { PT _ (TS _ 31) }
	'while'        { PT _ (TS _ 32) }
	'{'            { PT _ (TS _ 33) }
	'||'           { PT _ (TS _ 34) }
	'}'            { PT _ (TS _ 35) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Block           rule  5
	ListStmt        rules 6, 7
	Stmt            rules 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21
	Arg             rules 22, 23
	ListArg         rules 24, 25, 26
	Item            rules 27, 28
	ListItem        rules 29, 30
	Type            rules 31, 32
	PType           rules 33, 34, 35
	VType           rule  36
	ListType        rules 37, 38, 39
	Expr6           rules 40, 41, 42, 43, 44, 45, 46
	Expr5           rules 47, 48, 49
	Expr4           rules 50, 51
	Expr3           rules 52, 53
	Expr2           rules 54, 55
	Expr1           rules 56, 57
	Expr            rules 58, 59
	ListExpr        rules 60, 61, 62
	AddOp           rules 63, 64
	MulOp           rules 65, 66, 67
	RelOp           rules 68, 69, 70, 71, 72, 73

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'!'            reduce using rule 6
	'('            reduce using rule 6
	'-'            reduce using rule 6
	';'            reduce using rule 6
	'bool'         reduce using rule 6
	'false'        reduce using rule 6
	'if'           reduce using rule 6
	'int'          reduce using rule 6
	'print'        reduce using rule 6
	'return'       reduce using rule 6
	'string'       reduce using rule 6
	'true'         reduce using rule 6
	'void'         reduce using rule 6
	'while'        reduce using rule 6
	'{'            reduce using rule 6
	L_ident        reduce using rule 6
	L_integ        reduce using rule 6
	L_quoted       reduce using rule 6
	%eof           reduce using rule 6

	Program        goto state 3
	ListStmt       goto state 4

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListStmt .                               (rule 4)
	ListStmt -> ListStmt . Stmt                         (rule 7)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	';'            shift, and enter state 23
	'bool'         shift, and enter state 24
	'false'        shift, and enter state 25
	'if'           shift, and enter state 26
	'int'          shift, and enter state 27
	'print'        shift, and enter state 28
	'return'       shift, and enter state 29
	'string'       shift, and enter state 30
	'true'         shift, and enter state 31
	'void'         shift, and enter state 32
	'while'        shift, and enter state 33
	'{'            shift, and enter state 34
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36
	%eof           reduce using rule 4

	Ident          goto state 5
	Integer        goto state 6
	String         goto state 7
	Block          goto state 8
	Stmt           goto state 9
	Type           goto state 10
	PType          goto state 11
	VType          goto state 12
	Expr6          goto state 13
	Expr5          goto state 14
	Expr4          goto state 15
	Expr3          goto state 16
	Expr2          goto state 17
	Expr1          goto state 18
	Expr           goto state 19

State 5

	Stmt -> Ident . '=' Expr ';'                        (rule 12)
	Stmt -> Ident . '++' ';'                            (rule 13)
	Stmt -> Ident . '--' ';'                            (rule 14)
	Expr6 -> Ident .                                    (rule 40)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 45)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	'('            shift, and enter state 67
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	'++'           shift, and enter state 68
	'-'            reduce using rule 40
	'--'           shift, and enter state 69
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'='            shift, and enter state 70
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'||'           reduce using rule 40


State 6

	Expr6 -> Integer .                                  (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'||'           reduce using rule 41


State 7

	Expr6 -> String .                                   (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'/'            reduce using rule 42
	';'            reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	'||'           reduce using rule 42


State 8

	Stmt -> Block .                                     (rule 9)

	'!'            reduce using rule 9
	'('            reduce using rule 9
	'-'            reduce using rule 9
	';'            reduce using rule 9
	'bool'         reduce using rule 9
	'false'        reduce using rule 9
	'if'           reduce using rule 9
	'int'          reduce using rule 9
	'print'        reduce using rule 9
	'return'       reduce using rule 9
	'string'       reduce using rule 9
	'true'         reduce using rule 9
	'void'         reduce using rule 9
	'while'        reduce using rule 9
	'{'            reduce using rule 9
	'}'            reduce using rule 9
	L_ident        reduce using rule 9
	L_integ        reduce using rule 9
	L_quoted       reduce using rule 9
	%eof           reduce using rule 9


State 9

	ListStmt -> ListStmt Stmt .                         (rule 7)

	'!'            reduce using rule 7
	'('            reduce using rule 7
	'-'            reduce using rule 7
	';'            reduce using rule 7
	'bool'         reduce using rule 7
	'false'        reduce using rule 7
	'if'           reduce using rule 7
	'int'          reduce using rule 7
	'print'        reduce using rule 7
	'return'       reduce using rule 7
	'string'       reduce using rule 7
	'true'         reduce using rule 7
	'void'         reduce using rule 7
	'while'        reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	L_ident        reduce using rule 7
	L_integ        reduce using rule 7
	L_quoted       reduce using rule 7
	%eof           reduce using rule 7


State 10

	Stmt -> Type . ListItem ';'                         (rule 10)
	Stmt -> Type . Ident '(' ListArg ')' Block          (rule 11)

	L_ident        shift, and enter state 2

	Ident          goto state 64
	Item           goto state 65
	ListItem       goto state 66

State 11

	Type -> PType .                                     (rule 31)

	'&'            reduce using rule 31
	L_ident        reduce using rule 31


State 12

	Type -> VType .                                     (rule 32)

	'&'            reduce using rule 32
	L_ident        reduce using rule 32


State 13

	Expr5 -> Expr6 .                                    (rule 49)

	'!='           reduce using rule 49
	'%'            reduce using rule 49
	'&&'           reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	'||'           reduce using rule 49


State 14

	Expr4 -> Expr5 .                                    (rule 51)

	'!='           reduce using rule 51
	'%'            reduce using rule 51
	'&&'           reduce using rule 51
	')'            reduce using rule 51
	'*'            reduce using rule 51
	'+'            reduce using rule 51
	','            reduce using rule 51
	'-'            reduce using rule 51
	'/'            reduce using rule 51
	';'            reduce using rule 51
	'<'            reduce using rule 51
	'<='           reduce using rule 51
	'=='           reduce using rule 51
	'>'            reduce using rule 51
	'>='           reduce using rule 51
	'||'           reduce using rule 51


State 15

	Expr4 -> Expr4 . MulOp Expr5                        (rule 50)
	Expr3 -> Expr4 .                                    (rule 53)

	'!='           reduce using rule 53
	'%'            shift, and enter state 61
	'&&'           reduce using rule 53
	')'            reduce using rule 53
	'*'            shift, and enter state 62
	'+'            reduce using rule 53
	','            reduce using rule 53
	'-'            reduce using rule 53
	'/'            shift, and enter state 63
	';'            reduce using rule 53
	'<'            reduce using rule 53
	'<='           reduce using rule 53
	'=='           reduce using rule 53
	'>'            reduce using rule 53
	'>='           reduce using rule 53
	'||'           reduce using rule 53

	MulOp          goto state 60

State 16

	Expr3 -> Expr3 . AddOp Expr4                        (rule 52)
	Expr2 -> Expr3 .                                    (rule 55)

	'!='           reduce using rule 55
	'&&'           reduce using rule 55
	')'            reduce using rule 55
	'+'            shift, and enter state 58
	','            reduce using rule 55
	'-'            shift, and enter state 59
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'||'           reduce using rule 55

	AddOp          goto state 57

State 17

	Expr2 -> Expr2 . RelOp Expr3                        (rule 54)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 56)
	Expr1 -> Expr2 .                                    (rule 57)

	'!='           shift, and enter state 50
	'&&'           shift, and enter state 51
	')'            reduce using rule 57
	','            reduce using rule 57
	';'            reduce using rule 57
	'<'            shift, and enter state 52
	'<='           shift, and enter state 53
	'=='           shift, and enter state 54
	'>'            shift, and enter state 55
	'>='           shift, and enter state 56
	'||'           reduce using rule 57

	RelOp          goto state 49

State 18

	Expr -> Expr1 . '||' Expr                           (rule 58)
	Expr -> Expr1 .                                     (rule 59)

	')'            reduce using rule 59
	','            reduce using rule 59
	';'            reduce using rule 59
	'||'           shift, and enter state 48


State 19

	Stmt -> Expr . ';'                                  (rule 20)

	';'            shift, and enter state 47


State 20

	Expr5 -> '!' . Expr6                                (rule 48)

	'('            shift, and enter state 21
	'false'        shift, and enter state 25
	'true'         shift, and enter state 31
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 39
	Integer        goto state 6
	String         goto state 7
	Expr6          goto state 46

State 21

	Expr6 -> '(' . Expr ')'                             (rule 46)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	'false'        shift, and enter state 25
	'true'         shift, and enter state 31
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 39
	Integer        goto state 6
	String         goto state 7
	Expr6          goto state 13
	Expr5          goto state 14
	Expr4          goto state 15
	Expr3          goto state 16
	Expr2          goto state 17
	Expr1          goto state 18
	Expr           goto state 45

State 22

	Expr5 -> '-' . Expr6                                (rule 47)

	'('            shift, and enter state 21
	'false'        shift, and enter state 25
	'true'         shift, and enter state 31
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 39
	Integer        goto state 6
	String         goto state 7
	Expr6          goto state 44

State 23

	Stmt -> ';' .                                       (rule 8)

	'!'            reduce using rule 8
	'('            reduce using rule 8
	'-'            reduce using rule 8
	';'            reduce using rule 8
	'bool'         reduce using rule 8
	'false'        reduce using rule 8
	'if'           reduce using rule 8
	'int'          reduce using rule 8
	'print'        reduce using rule 8
	'return'       reduce using rule 8
	'string'       reduce using rule 8
	'true'         reduce using rule 8
	'void'         reduce using rule 8
	'while'        reduce using rule 8
	'{'            reduce using rule 8
	'}'            reduce using rule 8
	L_ident        reduce using rule 8
	L_integ        reduce using rule 8
	L_quoted       reduce using rule 8
	%eof           reduce using rule 8


State 24

	PType -> 'bool' .                                   (rule 35)

	'&'            reduce using rule 35
	L_ident        reduce using rule 35


State 25

	Expr6 -> 'false' .                                  (rule 44)

	'!='           reduce using rule 44
	'%'            reduce using rule 44
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	';'            reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'||'           reduce using rule 44


State 26

	Stmt -> 'if' . '(' Expr ')' Block                   (rule 17)
	Stmt -> 'if' . '(' Expr ')' Block 'else' Block      (rule 18)

	'('            shift, and enter state 43


State 27

	PType -> 'int' .                                    (rule 33)

	'&'            reduce using rule 33
	L_ident        reduce using rule 33


State 28

	Stmt -> 'print' . Expr ';'                          (rule 21)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	'false'        shift, and enter state 25
	'true'         shift, and enter state 31
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 39
	Integer        goto state 6
	String         goto state 7
	Expr6          goto state 13
	Expr5          goto state 14
	Expr4          goto state 15
	Expr3          goto state 16
	Expr2          goto state 17
	Expr1          goto state 18
	Expr           goto state 42

State 29

	Stmt -> 'return' . Expr ';'                         (rule 15)
	Stmt -> 'return' . ';'                              (rule 16)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	';'            shift, and enter state 41
	'false'        shift, and enter state 25
	'true'         shift, and enter state 31
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 39
	Integer        goto state 6
	String         goto state 7
	Expr6          goto state 13
	Expr5          goto state 14
	Expr4          goto state 15
	Expr3          goto state 16
	Expr2          goto state 17
	Expr1          goto state 18
	Expr           goto state 40

State 30

	PType -> 'string' .                                 (rule 34)

	'&'            reduce using rule 34
	L_ident        reduce using rule 34


State 31

	Expr6 -> 'true' .                                   (rule 43)

	'!='           reduce using rule 43
	'%'            reduce using rule 43
	'&&'           reduce using rule 43
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	';'            reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'=='           reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'||'           reduce using rule 43


State 32

	VType -> 'void' .                                   (rule 36)

	'&'            reduce using rule 36
	L_ident        reduce using rule 36


State 33

	Stmt -> 'while' . '(' Expr ')' Block                (rule 19)

	'('            shift, and enter state 38


State 34

	Block -> '{' . ListStmt '}'                         (rule 5)

	'!'            reduce using rule 6
	'('            reduce using rule 6
	'-'            reduce using rule 6
	';'            reduce using rule 6
	'bool'         reduce using rule 6
	'false'        reduce using rule 6
	'if'           reduce using rule 6
	'int'          reduce using rule 6
	'print'        reduce using rule 6
	'return'       reduce using rule 6
	'string'       reduce using rule 6
	'true'         reduce using rule 6
	'void'         reduce using rule 6
	'while'        reduce using rule 6
	'{'            reduce using rule 6
	'}'            reduce using rule 6
	L_ident        reduce using rule 6
	L_integ        reduce using rule 6
	L_quoted       reduce using rule 6

	ListStmt       goto state 37

State 35

	Integer -> L_integ .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	';'            reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'||'           reduce using rule 2


State 36

	String -> L_quoted .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'||'           reduce using rule 3


State 37

	Block -> '{' ListStmt . '}'                         (rule 5)
	ListStmt -> ListStmt . Stmt                         (rule 7)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	';'            shift, and enter state 23
	'bool'         shift, and enter state 24
	'false'        shift, and enter state 25
	'if'           shift, and enter state 26
	'int'          shift, and enter state 27
	'print'        shift, and enter state 28
	'return'       shift, and enter state 29
	'string'       shift, and enter state 30
	'true'         shift, and enter state 31
	'void'         shift, and enter state 32
	'while'        shift, and enter state 33
	'{'            shift, and enter state 34
	'}'            shift, and enter state 90
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 5
	Integer        goto state 6
	String         goto state 7
	Block          goto state 8
	Stmt           goto state 9
	Type           goto state 10
	PType          goto state 11
	VType          goto state 12
	Expr6          goto state 13
	Expr5          goto state 14
	Expr4          goto state 15
	Expr3          goto state 16
	Expr2          goto state 17
	Expr1          goto state 18
	Expr           goto state 19

State 38

	Stmt -> 'while' '(' . Expr ')' Block                (rule 19)

	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'-'            shift, and enter state 22
	'false'        shift, and enter state 25
	'true'         shift, and enter state 31
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 35
	L_quoted       shift, and enter state 36

	Ident          goto state 39
	Integer        goto state 6
	String         goto state 7
	Expr6          goto state 13
	Expr5          goto state 14
	Expr4          goto state 15
	Expr3          goto state 16
	Expr2          goto state 17
	Expr1          goto state 18
	Expr           goto state 89

State 39

	Expr6 -> Ident .                                    (rule 40)
	Expr6 -> Ident . '(' ListExpr ')'                   (rule 45)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	'('            shift, and enter state 67
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'||'           reduce using rule 40


State 40

	Stmt -> 'return' Expr . ';'                         (rule 15)

	';'            shift, and enter state 88


State 41

	Stmt -> 'return' ';' .                              (rule 16)
